--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 
     <script src="./scripts/script.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
